--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,8 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <title>React App</title>
   </head>
   <body>
